--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="src/popup.js"></script>
+    <script src="popup.js"></script>
   </head>
   <body>
-    <ul id="tabsList"></ul>
+    <h1>Tab collapse</h1>
   </body>
 </html>
